force-app/main/default/objects/LLM__c/LLM__c.object-meta.xml
<CustomObject>
    <label>LLM</label>
    <nameField>
        <label>LLM Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LLMs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>