force-app/main/default/objects/LLM__c/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <label>End point</label>
    <type>Url</type>
</CustomField>