force-app/main/default/objects/LLM__c/fields/NameCred__c.field-meta.xml
<CustomField>
    <fullName>NameCred__c</fullName>
    <label>Name Cred</label>
    <length>255</length>
    <type>Text</type>
</CustomField>