force-app/main/default/objects/LLM__c/fields/PayloadType__c.field-meta.xml
<CustomField>
    <fullName>PayloadType__c</fullName>
    <label>Payload Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>